--- a/index.html
+++ b/index.html
@@ -68,8 +68,12 @@
   <script src="js/tracking/xapi.js"></script>
   <script src="js/tracking/tracking.js"></script>
 
-  <!-- Levels and app bootstrap -->
+    <!-- Levels and app bootstrap -->
   <script src="js/levels/level1.js"></script>
+  <script src="js/levels/level2.js"></script>
+  <script src="js/levels/level3.js"></script>
   <script src="js/app.js"></script>
+
+
 </body>
 </html>
