--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
   <script src="js/levels/level1.js"></script>
   <script src="js/levels/level2.js"></script>
   <script src="js/levels/level3.js"></script>
+  <script src="js/levels/level4.js"></script>
   <script src="js/app.js"></script>
+
 
 
 </body>
