added Level 5 to manifest and package

--- a/index.html
+++ b/index.html
@@ -68,12 +68,14 @@
   <script src="js/tracking/xapi.js"></script>
   <script src="js/tracking/tracking.js"></script>
 
-    <!-- Levels and app bootstrap -->
+      <!-- Levels and app bootstrap -->
   <script src="js/levels/level1.js"></script>
   <script src="js/levels/level2.js"></script>
   <script src="js/levels/level3.js"></script>
   <script src="js/levels/level4.js"></script>
+  <script src="js/levels/level5.js"></script>
   <script src="js/app.js"></script>
+
 
 
 
