--- a/scorm/scorm-launch.html
+++ b/scorm/scorm-launch.html
@@ -64,12 +64,14 @@
   <script src="js/tracking/xapi.js"></script>
   <script src="js/tracking/tracking.js"></script>
 
-    <!-- same scripts, but relative to /scorm -->
+      <!-- same scripts, but relative to /scorm -->
   <script src="js/levels/level1.js"></script>
   <script src="js/levels/level2.js"></script>
   <script src="js/levels/level3.js"></script>
   <script src="js/levels/level4.js"></script>
+  <script src="js/levels/level5.js"></script>
   <script src="js/app.js"></script>
+
 
 
 
