--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
   <script src="js/levels/level3.js"></script>
   <script src="js/levels/level4.js"></script>
   <script src="js/levels/level5.js"></script>
+  <script src="js/levels/level6.js"></script>
   <script src="js/app.js"></script>
+
 
 
 
